--- a/Css/MainPage.css
+++ b/Css/MainPage.css
@@ -50,41 +50,44 @@ label {
 }
 /**********************搜索欄樣式結束*****************/
 /**********************搜索結果樣式*******************/
-.divResult
-{
-
-}
-
-.divResult table {
+.resultTable {
     border: 1px solid #666;
     border-collapse: collapse;
+    cursor: default;
 }
 
-.divResult table tr td {
+.resultTable tr td {       /*內容*/
     border: 1px solid #aaa;
     padding:0.1em 0.5em 0.1em;
     text-align: center;
 }
-
-.divSearch table tr:nth-child(2n){
-    background-color: #222;
-}
-
-.divResult table tr:first-child {
+.resultTitle td {       /*標題欄*/
     background-color: #333;
     color: #fff;
-    font-weight: bolder;
+    font-weight: bold;
 }
-
-.divResult table tr:nth-child(2n)
+.resultContent:nth-child(2n+1)
 {
     background-color: #efffef;
 }
-
-.divResult table tr:hover {
+.resultContent:hover {
     background-color: #88ffaa;
-    color: #000;
 }
+
+#selAll {
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    color: #000;
+    text-decoration: none;
+}
+
+#selAll:hover {
+    background-color: #000;
+    color: #fff;
+}
+
  /************************搜索結果樣式結束***********************/
 
  /************************主面板样式*****************************/
@@ -118,7 +121,7 @@ label {
     height:20px;
     /*border:1px #F00 solid;*/
     position: absolute;
-    bottom: 5px;
+    bottom: 0px;
     text-align: right;
     font-size: 14px;
 }
